rip surface